fix: adjust carousel visibility and enhance itinerary data handling

--- a/src/app/pages/tour/components/tour-itinerary/tour-itinerary.component.scss
+++ b/src/app/pages/tour/components/tour-itinerary/tour-itinerary.component.scss
@@ -360,6 +360,7 @@ $spaces: (
     margin-left: 1rem;
     background-color: transparent;
     padding: 0 0 1.5rem 0.5rem;
+    width: 90%;
     @include resp(xl) {
       padding-bottom: 1rem;
     }
